--- a/server/payment-service/package.json
+++ b/server/payment-service/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "md5": "^2.3.0",
     "mysql2": "^3.14.0"
   }
 }
