--- a/server/auth-service/Dockerfile
+++ b/server/auth-service/Dockerfile
@@ -1,4 +1,4 @@
-# Use the node image to avoid re-installing Node.js and npm
+# Use Node.js image
 FROM node:22.13.1 AS build
 
 WORKDIR /usr/src/auth-service
@@ -12,9 +12,10 @@ RUN npm install
 # Copy the entire application code
 COPY . .
 
+# Rebuild bcrypt
 RUN npm rebuild bcrypt --build-from-source
 
-# Expose the port your app runs on
+# Expose the authentication service port
 EXPOSE 4001
 
 # Command to run the application
