--- a/server/restaurant-service/package.json
+++ b/server/restaurant-service/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "prisma": "^6.5.0"
   }
 }
