Create Navbar HeroSection

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,6 +22,24 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
+  },
+
+  "baseUrl": "./",
+
+  /* Paths */
+  "paths": {
+    "@assets/*": ["src/assets/*"],
+    "@components/*": ["src/components/*"],
+    "@common/*": ["src/common/*"],
+    "@contexts/*": ["src/contexts/*"],
+    "@helper/*": ["src/helper/*"],
+    "@hooks/*": ["src/hooks/*"],
+    "@pages/*": ["src/pages/*"],
+    "@redux/*": ["src/redux/*"],
+    "@routes/*":["src/routes/*"],
+    "@services/*":["src/services/*"],
+    "@theme/*":["src/theme/*"],
+    "@utils/*": ["src/utils/*"],
   },
   "include": ["src"]
 }
