--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "@tailwindcss/vite": "^4.0.17",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
