--- a/server/delivery-service/package.json
+++ b/server/delivery-service/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -19,5 +20,8 @@
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.6.0"
   }
 }
