--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.0.17",
+    "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
