--- a/server/payment-service/package.json
+++ b/server/payment-service/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mysql2": "^3.14.0"
   }
