--- a/server/delivery-service/package.json
+++ b/server/delivery-service/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prisma": "^6.6.0"
   }
 }
