Change the paths call pattern

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -21,6 +21,25 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
-  }
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "./",
+
+    /* Paths */
+    "paths": {
+      "@app_assets/*": ["src/assets/*"],
+      "@app_components/*": ["src/components/*"],
+      "@app_common/*": ["src/common/*"],
+      "@app_contexts/*": ["src/contexts/*"],
+      "@app_helper/*": ["src/helper/*"],
+      "@app_hooks/*": ["src/hooks/*"],
+      "@app_pages/*": ["src/pages/*"],
+      "@app_redux/*": ["src/redux/*"],
+      "@app_routes/*": ["src/routes/*"],
+      "@app_services/*": ["src/services/*"],
+      "@app_theme/*": ["src/theme/*"],
+      "@app_utils/*": ["src/utils/*"]
+    }
+  },
+  "include": ["src"]
 }
