--- a/server/delivery-service/package.json
+++ b/server/delivery-service/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
