--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
