--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -38,7 +38,8 @@
       "@app_routes/*": ["src/routes/*"],
       "@app_services/*": ["src/services/*"],
       "@app_theme/*": ["src/theme/*"],
-      "@app_utils/*": ["src/utils/*"]
+      "@app_utils/*": ["src/utils/*"],
+      "@app_interfaces/*": ["src/interfaces/*"]
     }
   },
   "include": ["src"]
