Removed App.tsx

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -26,3 +26,11 @@ dist-ssr
 #env
 .env
 
+#App.tsx
+./src/App.tsx
+
+#Dashboard section
+./src/pages/admin/DashBoardSection.tsx
+./src/pages/customer/DashBoardSection.tsx
+./src/pages/deliveryPerson/DashBoardSection.tsx
+./src/pages/restaurant/DashBoardSection.tsx
