--- a/client/.gitignore
+++ b/client/.gitignore
@@ -27,10 +27,10 @@ dist-ssr
 .env
 
 #App.tsx
-src/App.tsx
+./src/App.tsx
 
 #Dashboard Section
-src/pages/admin/DashBoardSection.tsx
-src/pages/customer/DashBoardSection.tsx
-src/pages/deliveryPerson/DashBoardSection.tsx
-src/pages/restaurant/DashBoardSection.tsx
+./src/pages/admin/DashBoardSection.tsx
+./src/pages/customer/DashBoardSection.tsx
+./src/pages/deliveryPerson/DashBoardSection.tsx
+./src/pages/restaurant/DashBoardSection.tsx
