--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#App.tsx
+./src/App.tsx
+
+#Dashboard Section
+./src/pages/admin/DashBoardSection.tsx
+./src/pages/customer/DashBoardSection.tsx
+./src/pages/deliveryPerson/DashBoardSection.tsx
+./src/pages/restaurant/DashBoardSection.tsx
