Implment working docker compose

--- a/server/auth-service/k8s/config.yaml
+++ b/server/auth-service/k8s/config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: auth-service-config
   namespace: eateazy
 data:
-  DB_HOST: "beta-core"  # Replace with the DB service name in K8s
+  DB_HOST: "beta-core"
   DB_NAME: "eatEazy"
   AUTH_SERVICE_PORT: "4001"
   JWT_EXPIRATION: "1h"
