--- a/server/auth-service/k8s/deployment.yaml
+++ b/server/auth-service/k8s/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: auth-service
 spec:
-  replicas: 2  # Adjust based on load
+  replicas: 2
   selector:
     matchLabels:
       app: auth-service
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: auth-service
-          image: auth-service:latest  # Replace with your actual image
+          image: auth-service:latest
           ports:
             - containerPort: 4001
           envFrom:
