--- a/server/auth-service/k8s/secret.yaml
+++ b/server/auth-service/k8s/secret.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: eateazy
 type: Opaque
 data:
-  DB_USER: cm9vdA==  # Base64 encoded "root"
-  DB_PASSWORD: TXlTUUwqMTIz  # Base64 encoded "MySQL*123"
-  JWT_SECRET: MjJmOTZmNmM0ZjRiNzFhZGNiMGUxMGQ5ODc0OWQ2OTk2ZWE4OTIyMDcyNGM4Y2FkNjZhYTgyMDFhOTdkYThhMQ==  # Base64 encoded JWT_SECRET
+  DB_USER: cm9vdA==
+  DB_PASSWORD: TXlTUUwqMTIz
+  JWT_SECRET: MjJmOTZmNmM0ZjRiNzFhZGNiMGUxMGQ5ODc0OWQ2OTk2ZWE4OTIyMDcyNGM4Y2FkNjZhYTgyMDFhOTdkYThhMQ==
