--- a/server/restaurant-service/Dockerfile
+++ b/server/restaurant-service/Dockerfile
@@ -1,19 +1,39 @@
-# Use Node.js image
-FROM node:22.13.1 AS build
+# Use Alpine-based Node.js image (lighter image)
+FROM node:18-alpine AS build
 
+# Set working directory
 WORKDIR /usr/src/restaurant-service
 
-# Copy package.json and package-lock.json
+# Install necessary build dependencies for bcrypt and Prisma
+RUN apk add --no-cache --virtual .build-deps build-base python3 openssl
+
+# Copy package files first to leverage Docker cache
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install production dependencies only
+RUN npm install --production
 
-# Copy the entire application code
+# Create prisma directory and copy schema
+RUN mkdir -p prisma
+COPY src/prisma/schema.prisma ./prisma/
+
+# Copy .env file from the src directory
+COPY src/.env ./prisma/
+
+# Generate Prisma client
+RUN npx prisma generate
+
+# Copy the rest of the application code
 COPY . .
+
+# Rebuild bcrypt (now that the necessary build tools are installed)
+RUN npm rebuild bcrypt --build-from-source
 
 # Expose the restaurant service port
 EXPOSE 4002
 
 # Command to run the application
 CMD ["npm", "start"]
+
+# Clean up build dependencies after bcrypt rebuild
+RUN apk del .build-deps
