--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0"
